# feo

./: .releaserc.json  CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
src/: main.rs  node.rs
src/node/: manager.rs  mod.rs  package.rs
src/subcommands/: install.rs
tests/: node_test.json  npm_registry_package.json
